--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "arcanedev/support": "^11.0"
     },
     "require-dev": {
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^11.0|12.0",
         "mockery/mockery": "^1.6",
         "orchestra/testbench-core": "^9.0",
         "phpunit/phpunit": "^10.5|^11.0",
