--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
-        "arcanedev/support": "^11.0"
+        "arcanedev/support": "dev-master"
     },
     "require-dev": {
         "laravel/framework": "^11.0|^12.0",
@@ -61,6 +61,12 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/CWallenberg/Support.git"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
